changes in get method of voter